samples/_failures_safe/1760886019_298fa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b58ef715.c: In function ‘main’:
./samples/SAFE/__tmp_b58ef715.c:144:15: error: expected ‘;’ at end of input
  144 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_b58ef715.c:144:9: error: expected declaration or statement at end of input
  144 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_b58ef715.c:144:9: error: expected declaration or statement at end of input
